Add event filtering for files and directories

The df52b1a3 revision introduced Type::files and Type::directories special
resource type values for queries, but it omitted to support the same
special values in the ResultWatcher.

BUG: 428085